; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/net/ipv6/extr_sit.c_ipip6_tunnel_uninit.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/net/ipv6/extr_sit.c_ipip6_tunnel_uninit.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.net_device = type { i32 }
%struct.net = type { i32 }
%struct.sit_net = type { i32**, %struct.net_device* }

@sit_net_id = common dso_local global i32 0, align 4
@ipip6_lock = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.net_device*)* @ipip6_tunnel_uninit to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @ipip6_tunnel_uninit(%struct.net_device* %0) #0 {
  %2 = alloca %struct.net_device*, align 8
  %3 = alloca %struct.net*, align 8
  %4 = alloca %struct.sit_net*, align 8
  store %struct.net_device* %0, %struct.net_device** %2, align 8
  %5 = load %struct.net_device*, %struct.net_device** %2, align 8
  %6 = call %struct.net* @dev_net(%struct.net_device* %5)
  store %struct.net* %6, %struct.net** %3, align 8
  %7 = load %struct.net*, %struct.net** %3, align 8
  %8 = load i32, i32* @sit_net_id, align 4
  %9 = call %struct.sit_net* @net_generic(%struct.net* %7, i32 %8)
  store %struct.sit_net* %9, %struct.sit_net** %4, align 8
  %10 = load %struct.net_device*, %struct.net_device** %2, align 8
  %11 = load %struct.sit_net*, %struct.sit_net** %4, align 8
  %12 = getelementptr inbounds %struct.sit_net, %struct.sit_net* %11, i32 0, i32 1
  %13 = load %struct.net_device*, %struct.net_device** %12, align 8
  %14 = icmp eq %struct.net_device* %10, %13
  br i1 %14, label %15, label %24

15:                                               ; preds = %1
  %16 = call i32 @write_lock_bh(i32* @ipip6_lock)
  %17 = load %struct.sit_net*, %struct.sit_net** %4, align 8
  %18 = getelementptr inbounds %struct.sit_net, %struct.sit_net* %17, i32 0, i32 0
  %19 = load i32**, i32*** %18, align 8
  %20 = getelementptr inbounds i32*, i32** %19, i64 0
  store i32* null, i32** %20, align 8
  %21 = call i32 @write_unlock_bh(i32* @ipip6_lock)
  %22 = load %struct.net_device*, %struct.net_device** %2, align 8
  %23 = call i32 @dev_put(%struct.net_device* %22)
  br label %34

24:                                               ; preds = %1
  %25 = load %struct.sit_net*, %struct.sit_net** %4, align 8
  %26 = load %struct.net_device*, %struct.net_device** %2, align 8
  %27 = call i32 @netdev_priv(%struct.net_device* %26)
  %28 = call i32 @ipip6_tunnel_unlink(%struct.sit_net* %25, i32 %27)
  %29 = load %struct.net_device*, %struct.net_device** %2, align 8
  %30 = call i32 @netdev_priv(%struct.net_device* %29)
  %31 = call i32 @ipip6_tunnel_del_prl(i32 %30, i32* null)
  %32 = load %struct.net_device*, %struct.net_device** %2, align 8
  %33 = call i32 @dev_put(%struct.net_device* %32)
  br label %34

34:                                               ; preds = %24, %15
  ret void
}

declare dso_local %struct.net* @dev_net(%struct.net_device*) #1

declare dso_local %struct.sit_net* @net_generic(%struct.net*, i32) #1

declare dso_local i32 @write_lock_bh(i32*) #1

declare dso_local i32 @write_unlock_bh(i32*) #1

declare dso_local i32 @dev_put(%struct.net_device*) #1

declare dso_local i32 @ipip6_tunnel_unlink(%struct.sit_net*, i32) #1

declare dso_local i32 @netdev_priv(%struct.net_device*) #1

declare dso_local i32 @ipip6_tunnel_del_prl(i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
